--- a/package.json
+++ b/package.json
@@ -9,20 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.1.9",
-    "@ai-sdk/openai": "^1.1.13",
-    "@deepgram/sdk": "^3.6.0",
-    "ai": "^3.3.20",
-    "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
-    "framer-motion": "^11.3.31",
-    "lucide-react": "^0.436.0",
     "next": "^14.2.24",
     "papaparse": "^5.5.2",
     "react": "^18",
-    "react-dom": "^18",
-    "react-markdown": "^9.0.1",
-    "replicate": "^0.32.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
@@ -30,6 +21,7 @@
     "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
